[BZ1165602] Allow -secmgr to be used with the appclient to enable the security manager.